--- a/src/shared/assets/locales/en-CA/translation.json
+++ b/src/shared/assets/locales/en-CA/translation.json
@@ -72,7 +72,7 @@
         "title": "Alerts",
         "watchedProducts": "My products",
         "updating": "Updating",
-        "noAlert": "You are not watching any product right now.",
+        "noAlert": "You are not watching any products right now.",
         "getStarted": "Get Started!",
         "createAlert": "Create a product alert",
         "alertCreated_success": "Alert created successfully!",
