Translation for Authenticating string

--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -6,7 +6,7 @@
     "otherLanguage": "EN",
     "otherLanguageCode": "en-CA",
     "welcome": {
-        "authenticating": "Authentication",
+        "authenticating": "Authentification",
         "planning": "Vous prévoyez acheter quelque chose?",
         "stopPaying": "Arrêtez de payer trop cher!",
         "getStarted": "Débuter",
