Added notes to entries

--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -58,6 +58,7 @@
             "title": "Magasins",
             "source": "Magasin",
             "price": "Prix",
+            "note": "Note",
             "addOtherSource": "Ajouter un magasin",
             "searchingSimilar": "Recherche de produits similaires...",
             "addOtherSourceSuggestion": "Vous pourriez vouloir ajouter ces produits à votre alerte",
