--- a/src/shared/assets/locales/en-CA/translation.json
+++ b/src/shared/assets/locales/en-CA/translation.json
@@ -58,6 +58,7 @@
             "title": "Stores",
             "source": "Store",
             "price": "Price",
+            "note": "Note",
             "addOtherSource": "Add a store",
             "searchingSimilar": "Searching for similar products...",
             "addOtherSourceSuggestion": "You might also want to add these products to your alert",
