--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -88,6 +88,17 @@
         "deleteConfirmation_title": "Supprimer une alerte",
         "deleteConfirmation_description": "Êtes-vous certain de vouloir supprimer l'alerte de produit?"
     },
+    "lists": {
+        "create": {
+            "title": "Créez une liste avec les alertes que vous désirez",
+            "name": "Nom",
+            "create": "Créer"
+        },
+        "noFilter": "Toutes",
+        "createButton": "Créer liste",
+        "listCreated_success": "Liste créée avec succès!",
+        "listCreated_failure": "Une erreur est survenue durant la création."
+    },
     "sources": {
         "add": "Ajouter",
         "addSource": "Naviguez sur les sites de vos magasins en ligne favoris et copiez l'URL de la page du produit"
