--- a/src/shared/assets/locales/en-CA/translation.json
+++ b/src/shared/assets/locales/en-CA/translation.json
@@ -92,7 +92,7 @@
         "create": {
             "title": "Create a list with the products you want",
             "name": "Name",
-            "create": "Create"
+            "save": "Save"
         },
         "noFilter": "All",
         "createButton": "Create list",
@@ -100,6 +100,8 @@
         "listCreated_failure": "An error occurred during the creation.",
         "listDeleted_success": "List deleted successfully!",
         "listDeleted_failure": "An error occurred during the deletion.",
+        "listUpdated_success": "List saved successfully!",
+        "listUpdated_failure": "An error occurred during the update.",
         "deleteConfirmation_title": "Delete list",
         "deleteConfirmation_description": "Are you sure you want to delete this list? It will not delete its products, only the list itself."
     },
