Some adjustments on the lists

--- a/src/shared/assets/locales/en-CA/translation.json
+++ b/src/shared/assets/locales/en-CA/translation.json
@@ -99,7 +99,7 @@
     },
     "lists": {
         "create": {
-            "title": "Create a list with the products you want",
+            "title": "Name your new list for the products you selected.",
             "name": "Name",
             "save": "Save"
         },
