--- a/src/shared/assets/locales/en-CA/translation.json
+++ b/src/shared/assets/locales/en-CA/translation.json
@@ -78,6 +78,7 @@
         "title": "Alerts",
         "watchedProducts": "My products",
         "updating": "Updating",
+        "working": "Working",
         "noAlert": "You are not watching any products right now.",
         "getStarted": "Get Started!",
         "createAlert": "Create a product alert",
