--- a/src/shared/assets/locales/fr-CA/translation.json
+++ b/src/shared/assets/locales/fr-CA/translation.json
@@ -32,6 +32,11 @@
             "lists_title": "Organizez vos produits",
             "lists_description": "Organizez vos produits en catégories de votre choix : Liste de Noël, cadeaux de fête, livres à lire. Personnalisez comme vous le voulez!"
         },
+        "blog": {
+            "available": "PriceWise a un blog!",
+            "join": "Joignez-vous à la discussion!",
+            "description": "Nous dicuterons de stratégies de magasinage, de fonctionalités de l'application et de la technologie derrière PriceWise"
+        },
         "chrome": {
             "extensionAvailable": "PriceWise a une extension Chrome!",
             "easily": "Magasinez intelligemment plus facilement!",
